updated upload function

--- a/src/design/Login.css
+++ b/src/design/Login.css
@@ -145,3 +145,9 @@ li a {
   padding: 8px;
   background-color: #dddddd;
 }
+
+.drag {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+}
