--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,12 +33,25 @@ div.well {
 }
 
 input {
-  background-color: rgb(204, 227, 253);
+  background-color: white;
   height: 30px;
   margin: 5px;
+  border: #abacad 1px solid;
+  border-radius: 2px;
 }
 
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+
 .button {
+  margin-left: 30%;
+  margin-top: 10px;
   background-color: #222222;
   border: none;
   color: white;
@@ -47,10 +60,8 @@ input {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
   border: 1px rgb(82, 82, 82) solid;
-  border-radius: 5px;
 }
 
 .button:hover {
@@ -81,7 +92,7 @@ input {
 }
 
 .p-img {
-  min-width: 600px;
+  min-height: 600px;
   max-width: 600px;
   max-height: 600px;
   position: absolute;
@@ -91,7 +102,6 @@ input {
   transform: translate(-50%, -50%);
   border: rgb(206, 206, 206) 1px solid;
   border-radius: 3px;
-
 }
 
 .img {
@@ -261,10 +271,9 @@ li a {
   font-style: oblique;
 }
 
-.post-wrap{
+.post-wrap {
   margin-top: 112px;
 }
-
 
 /*Mario Desk*/
 .desk {
@@ -336,7 +345,6 @@ li a {
   }
 }
 
-
 /* Breite der Scrollleiste */
 ::-webkit-scrollbar {
   width: 12px;
@@ -359,8 +367,256 @@ li a {
   background-color: #555;
 }
 
-.footer {
+footer {
   color: #757373;
   font-size: 13px;
   text-align: center;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Oswald|Roboto);
+
+.table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.table-cell {
+  display: table-cell;
+  vertical-align: middle;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.container {
+  position: relative;
+  width: 600px;
+  margin: 15% auto;
+  height: 320px;
+  background-color: #45484b;
+  top: 50%;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  border: #999999 solid 1px;
+}
+.container .box {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.container .box:before,
+.container .box:after {
+  content: " ";
+  position: absolute;
+  left: 152px;
+  top: 50px;
+  background-color: #1d2020;
+  transform: rotateX(52deg) rotateY(15deg) rotateZ(-38deg);
+  width: 300px;
+  height: 285px;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.container .box:after {
+  background-color: #4b4e4e;
+  top: -10px;
+  left: 80px;
+  width: 320px;
+  height: 180px;
+}
+.container .container-forms {
+  position: relative;
+}
+.container .btn {
+  cursor: pointer;
+  text-align: center;
+  margin: 0 auto;
+  width: 60px;
+  color: #fff;
+  background-color: #03a9f4;
+  opacity: 1;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.container .btn:hover {
+  opacity: 0.7;
+}
+.container .btn,
+.container input {
+  padding: 10px 15px;
+}
+.container input {
+  margin: 0 auto 15px;
+  display: block;
+  width: 220px;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.container .container-forms .container-info {
+  text-align: left;
+  font-size: 0;
+}
+.container .container-forms .container-info .info-item {
+  text-align: center;
+  font-size: 16px;
+  width: 300px;
+  height: 320px;
+  display: inline-block;
+  vertical-align: top;
+  color: #fff;
+  opacity: 1;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.container .container-forms .container-info .info-item p {
+  font-size: 20px;
+  margin: 20px;
+}
+.container .container-forms .container-info .info-item .btn {
+  background-color: transparent;
+  border: 1px solid #fff;
+  width: 100px;
+}
+.container .container-forms .container-info .info-item .table-cell {
+  padding-right: 35px;
+}
+.container
+  .container-forms
+  .container-info
+  .info-item:nth-child(2)
+  .table-cell {
+  padding-left: 35px;
+  padding-right: 0;
+}
+.container .container-form {
+  overflow: hidden;
+  position: absolute;
+  left: 30px;
+  top: -30px;
+  width: 305px;
+  height: 380px;
+  background-color: #fff;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.container .container-form:before {
+  content: "✔";
+  position: absolute;
+  left: 160px;
+  top: -50px;
+  color: #5356ad;
+  font-size: 130px;
+  opacity: 0;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.container .container-form .btn {
+  position: relative;
+  box-shadow: 0 0 10px 1px #18ffff;
+  margin-top: 30px;
+}
+.container .form-item {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.container .form-item.sign-up {
+  position: absolute;
+  left: -100%;
+  opacity: 0;
+}
+.container.log-in .box:before {
+  position: absolute;
+  left: 180px;
+  top: 62px;
+  height: 265px;
+}
+.container.log-in .box:after {
+  top: 22px;
+  left: 192px;
+  width: 324px;
+  height: 220px;
+}
+.container.log-in .container-form {
+  left: 265px;
+}
+.container.log-in .container-form .form-item.sign-up {
+  left: 0;
+  opacity: 1;
+}
+.container.log-in .container-form .form-item.log-in {
+  left: -100%;
+  opacity: 0;
+}
+.container.active {
+  width: 260px;
+  height: 140px;
+  margin-top: -70px;
+}
+.container.active .container-form {
+  left: 30px;
+  width: 200px;
+  height: 200px;
+}
+.container.active .container-form:before {
+  content: "✔";
+  position: absolute;
+  left: 51px;
+  top: 5px;
+  color: #5356ad;
+  font-size: 130px;
+  opacity: 1;
+}
+.container.active input,
+.container.active .btn,
+.container.active .info-item {
+  display: none;
+  opacity: 0;
+  padding: 0px;
+  margin: 0 auto;
+  height: 0;
+}
+.container.active .form-item {
+  height: 100%;
+}
+.container.active .container-forms .container-info .info-item {
+  height: 0%;
+  opacity: 0;
+}
+
+.rabbit {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 3;
+  fill: #fff;
 }
